# CloudMigration-Benchmark-Project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/mock/: mock_responses.py  mock_test_cases.py
data/samples/: cloud_migration_mini_10.xlsx
docs/: DESIGN.md  DEVELOPMENT.md  INDUSTRY_DEPTH_EVALUATION.md  TESTING.md  USER_GUIDE.md
src/cloudmigration_benchmark/: __init__.py
src/cloudmigration_benchmark/api/: __init__.py  routes.py
src/cloudmigration_benchmark/core/: __init__.py  benchmark_runner.py  config.py  models.py  scoring_engine.py  test_suite_loader.py
src/cloudmigration_benchmark/evaluation/: __init__.py  base.py  dimensions.py  industry_depth.py
src/cloudmigration_benchmark/web/: app.py
tests/: test_api.py  test_core.py  test_industry_depth.py  test_mock_data.py
